Bug 1366921 - stylo: Update user fonts in cached font metrics' gfxFontGroups in the pre-traversal step. r=bholley,jfkthame

MozReview-Commit-ID: DAhhWyAjxku