layout/style/ServoStyleSet.h
@@ -543,6 +543,7 @@ private:
   bool mAllowResolveStaleStyles;
   bool mAuthorStyleDisabled;
   StylistState mStylistState;
+  uint64_t mUserFontSetUpdateGeneration;
 
   bool mNeedsRestyleAfterEnsureUniqueInner;
 
